Realized I don't need the complexity of the background script now that I learned about the getSelected function of the tabs "package"

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.1",
   "description": "Creates a simple interface to edit long URLs with lots of parameters..",
   "manifest_version": 2,
-  "background": {"scripts":["background.js"]},
+  //"background": {"scripts":["background.js"]},
   "permissions": ["tabs"],
 "browser_action": {
     "default_icon": "url_edit.png",
